<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_calibrate"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/nav_title_calibrate" />
        <item
            android:id="@+id/nav_add_new_measurement"
            android:icon="@drawable/ic_add_new"
            android:title="@string/nav_title_new_measure" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/nav_title_gallery" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/nav_title_slideshow" />
    </group>

    <item android:title="@string/nav_title_communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/nav_title_share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/nav_title_send" />
        </menu>
    </item>

</menu>
